8295159: DSO created with -ffast-math breaks Java floating-point arithmetic