src/hotspot/share/utilities/globalDefinitions.hpp
@@ -1373,4 +1373,8 @@ template<typename K> bool primitive_equals(const K& k0, const K& k1) {
 template<typename T>
 std::add_rvalue_reference_t<T> declval() noexcept;
 
+// Quickly test to make sure IEEE-754 subnormal numbers are correctly
+// handled.
+bool IEEE_subnormal_handling_OK();
+
 #endif // SHARE_UTILITIES_GLOBALDEFINITIONS_HPP
